// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Cell Cell Header 1`] = `
<table>
  <thead>
    <tr>
      <th
        className="sc-iCoHVE fPGLWj"
      >
        name
      </th>
    </tr>
  </thead>
</table>
`;

exports[`Storyshots Cell Cell Text Long 1`] = `
<table>
  <thead>
    <tr>
      <td
        className="sc-iCoHVE fPGLWj"
      >
        header with a long long long too long text
      </td>
    </tr>
  </thead>
</table>
`;
